--- a/pages/resources.html
+++ b/pages/resources.html
@@ -36,6 +36,30 @@
         <li>Resource Link 2</li>
         <li>Resource Link 3</li>
     </ul>
+    <h3>FAQ</h3>
+    <h4 onclick="toggleContent('question1', 'icon1');" class="toggle-icon">
+    <span id="icon1">►</span>What are the clinic's hours of operation?</h4>
+    <div id="question1" style="display: none;">
+        <p>
+            Details for Question 1... Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+    </div>
+
+    <h4 onclick="toggleContent('question2', 'icon2');" class="toggle-icon">
+    <span id="icon2">►</span>Do I need an appointment to see a vet, or do you accept walk-ins?</h4>
+    <div id="question2" style="display: none;">
+        <p>
+            Details for Question 2... Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+    </div>
+
+    <h4 onclick="toggleContent('question3', 'icon3');" class="toggle-icon">
+    <span id="icon2">►</span>What kind of animals do you treat at your clinic?</h4>
+    <div id="question3" style="display: none;">
+        <p>
+            Details for Question 3... Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+    </div>
 
   </div>
 
@@ -44,6 +68,21 @@
         Dr. Blank's Veterinary Clinic &copy; 2023
     </p>
   </footer>
+
+  <script>
+    // For FAQ dropdown menu
+    function toggleContent(id, iconId) {
+      var content = document.getElementById(id);
+      var icon = document.getElementById(iconId);
+      if (content.style.display === "block") {
+        content.style.display = "none";
+        icon.innerHTML = '►';
+      } else {
+        content.style.display = "block";
+        icon.innerHTML = '▼';
+      }
+    }
+    </script>
   
 </body>
 </html>
