--- a/pages/index.html
+++ b/pages/index.html
@@ -8,15 +8,13 @@
 </head>
 <body id="body">
 
-  <div id="b-head">
-    <h1>Dr. Blank's Veterinary Clinic</h1>
-  </div>
-
-  <nav>
-    <p>
-      [Generic Nav Text Here]
-    </p>
-  </nav>
+  <script>
+    fetch('header.html')
+      .then(response => response.text())
+      .then(html => {
+        document.body.insertAdjacentHTML('afterbegin', html);
+      });
+  </script>
 
   <div id="main">
     <p>
@@ -24,11 +22,13 @@
     </p>
   </div>
 
-  <footer>
-    <p>
-      [Generic Footer Text Here]
-    </p>
-  </footer>
+  <script>
+    fetch('footer.html')
+      .then(response => response.text())
+      .then(html => {
+        document.body.insertAdjacentHTML('beforeend', html);
+      });
+  </script>
   
 </body>
 </html>
