--- a/pages/login.html
+++ b/pages/login.html
@@ -17,22 +17,16 @@
   </script>
 
   <div id="main">
-    <h2>Create an Account:</h2>
+    <h2>Login:</h2>
     <p>
       <form>
-        <label for="fname">First name:</label><br>
-        <input type="text" id="fname" name="fname"><br>
-
-        <label for="lname">Last name:</label><br>
-        <input type="text" id="lname" name="lname"><br>
-
         <label for="email">Email:</label><br>
         <input type="text" id="email" name="email"><br>
 
         <label for="password">Password:</label><br>
         <input type="text" id="password" name="lname"><br>
 
-        <button>Create Account</button>
+        <button>Login</button>
       </form>
     </p>
   </div>
