--- a/pages/WellnessWizard.html
+++ b/pages/WellnessWizard.html
@@ -21,16 +21,17 @@
 
   <div id="main">
 
-    <form>
+    <form action="./appointment.php" mehtod="POST">
       <label for="name">Name:</label>
       <input type="text" id="name" name="name"><br>
 
-      <label for="animak">Animal:</label>
+      <label for="animal">Animal:</label>
       <select>
-        <option id="dog" value="dog">Dog</option>
-        <option id="cat" value="cat">Cat</option>
-        <option id="bird" value="bird">Bird</option>
-        <option id="lizard" value="lizard">Lizard</option>
+        <option id="dog" value="dog">Dodge</option>
+        <option id="cat" value="cat">Kittie</option>
+        <option id="bird" value="bird">Birb</option>
+        <option id="lizard" value="lizard">Lizard Wizard</option>
+        <option id="bunny" value="bunny">Bunny</option>
       </select><br>
 
       <label for="breed">Breed:</label>
